feat: add ga key

--- a/.env.prod
+++ b/.env.prod
@@ -3,7 +3,7 @@ EXTRAS_API_MAINNET=XXX_EXTRAS_API_MAINNET_XXX
 MAIAR_ID_API_MAINNET=XXX_MAIAR_ID_API_MAINNET_XXX
 UNIQUE_CONTRACT_ADDRESS=XXX_UNIQUE_CONTRACT_ADDRESS_XXX
 UNIQUE_CONTRACT_NAME=XXX_UNIQUE_CONTRACT_NAME_XXX
-
+GOOGLE_ANALYTICS_KEY=XXX_GOOGLE_ANALYTICS_KEY_XXX
 
 SINGLE_WALLET=true
 
