--- a/.env.staging
+++ b/.env.staging
@@ -3,6 +3,7 @@ EXTRAS_API_DEVNET=XXX_EXTRAS_API_DEVNET_XXX
 MAIAR_ID_API_DEVNET=XXX_MAIAR_ID_API_DEVNET_XXX
 UNIQUE_CONTRACT_ADDRESS=XXX_UNIQUE_CONTRACT_ADDRESS_XXX
 UNIQUE_CONTRACT_NAME=XXX_UNIQUE_CONTRACT_NAME_XXX
+GOOGLE_ANALYTICS_KEY=XXX_GOOGLE_ANALYTICS_KEY_XXX
 
 
 SINGLE_WALLET=true
