--- a/public/manifest.json
+++ b/public/manifest.json
@@ -9,13 +9,13 @@
     },
     {
       "sizes": "192x192",
-      "src": "xSafeRoundLogo.svg",
-      "type": "image/svg"
+      "src": "PWAicon.png",
+      "type": "image/png"
     },
     {
       "sizes": "512x512",
-      "src": "xSafeRoundLogo.svg",
-      "type": "image/svg"
+      "src": "PWAicon.png",
+      "type": "image/png"
     }
   ],
   "name": "Create React App Sample",
