--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,7 +4,7 @@
   "icons": [
     {
       "sizes": "64x64 32x32 24x24 16x16",
-      "src": "favicon.ico",
+      "src": "XSafe-symbol.svg",
       "type": "image/x-icon"
     },
     {
