feat: add build number and fix member plural/singular form

--- a/.env.template
+++ b/.env.template
@@ -4,6 +4,7 @@ MAIAR_ID_API_DEVNET=__MAIAR_ID_API_DEVNET__
 UNIQUE_CONTRACT_ADDRESS=__UNIQUE_CONTRACT_ADDRESS__
 UNIQUE_CONTRACT_NAME=__UNIQUE_CONTRACT_NAME__
 GOOGLE_ANALYTICS_KEY=__GOOGLE_ANALYTICS_KEY__
+REACT_APP_GH_ACCESS_TOKEN=__GH_ACCESS_TOKEN__
 
 
 SINGLE_WALLET=true
