--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
     "@mui/styles": "^5.6.1",
     "@mui/system": "^5.8.4",
     "@mui/x-data-grid": "^5.8.0",
-    "@multiversx/sdk-core": "12.6.0",
-    "@multiversx/sdk-dapp": "2.19.2",
-    "@multiversx/sdk-network-providers": "1.5.0",
+    "@multiversx/sdk-core": "12.19.0",
+    "@multiversx/sdk-dapp": "2.28.7",
+    "@multiversx/sdk-network-providers": "2.3.0",
     "@reduxjs/toolkit": "1.6.1",
     "@types/qrcode.react": "^1.0.2",
     "@types/styled-components": "^5.1.25",
@@ -52,6 +52,7 @@
     "react-csv": "^2.2.2",
     "react-csv-importer": "^0.7.1",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-i18next": "11.11.4",
     "react-inlinesvg": "2.3.0",
     "react-number-format": "^5.1.1",
@@ -64,6 +65,7 @@
     "redux-persist": "6.0.0",
     "reselect": "4.0.0",
     "sass": "^1.62.1",
+    "socket.io-client": "^4.7.4",
     "styled-components": "^5.3.5",
     "update": "0.7.4",
     "web-vitals": "1.0.1",
@@ -82,6 +84,8 @@
     "eslint-plugin-react-refresh": "^0.3.4",
     "typescript": "^5.0.2",
     "vite": "^4.3.2",
+    "vite-plugin-eslint": "^1.8.1",
+    "vite-plugin-mkcert": "^1.17.3",
     "vitest": "^0.31.4"
   }
 }
