--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -9,12 +9,10 @@ on:
 jobs:
   deploy-staging:
     runs-on: [ubuntu-latest]
-    env:
-      SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
     strategy:
       matrix:
         os: [ubuntu-latest]
-        node: [16]
+        node: [18]
 
     steps:
       - name: Checkout
@@ -27,10 +25,12 @@ jobs:
       - uses: nightstory/replace-env@v1
         id: create-env
         env:
+          WEBSOCKETS_URL: '${{ secrets.WEBSOCKETS_URL }}'
           GH_ACCESS_TOKEN: '${{ secrets.GH_ACCESS_TOKEN }}'
           UNIQUE_CONTRACT_ADDRESS: '${{ secrets.UNIQUE_CONTRACT_ADDRESS }}'
           UNIQUE_CONTRACT_NAME: '${{ secrets.UNIQUE_CONTRACT_NAME }}'
           GOOGLE_ANALYTICS_KEY: '${{ secrets.GOOGLE_ANALYTICS_KEY_DEVNET }}'
+          VITE_WEBSOCKETS_URL: '${{ secrets.VITE_WEBSOCKETS_URL_DEVNET }}'
           MVX_ENVIRONMENT: devnet
         with:
           input_file: .env.template
@@ -48,7 +48,7 @@ jobs:
 
       - uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version: 18.17.1
       - name: YARN Install
         id: YARN-Install
         if: success()
@@ -80,10 +80,10 @@ jobs:
         uses: up9cloud/action-rsync@v1.1
         if: success()
         env:
-          HOST: connect.xsafe.io
-          USER: graffino
+          HOST: connect-devnet.xsafe.io
+          USER: ubuntu
 
-          KEY: ${{secrets.NEW_DEPLOY_SSH_KEY}}
+          KEY: ${{secrets.DEPLOY_SSH_KEY}}
           SSH_ARGS: ' -q -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no'
 
           VERBOSE: true
